err.txt
pw-window-watcher2.cpp:21: warning: "NOMINMAX" redefined
   21 | #define NOMINMAX
      | 
In file included from c:\mingw64\include\c++\12.2.0\x86_64-w64-mingw32\bits\c++config.h:655,
                 from c:\mingw64\include\c++\12.2.0\iostream:38,
                 from pw-window-watcher2.cpp:16:
c:\mingw64\include\c++\12.2.0\x86_64-w64-mingw32\bits\os_defines.h:45: note: this is the location of the previous definition
   45 | #define NOMINMAX 1
      | 
pw-window-watcher2.cpp: In function 'int main()':
pw-window-watcher2.cpp:171:28: error: cast from 'WCHAR*' {aka 'wchar_t*'} to 'TCHAR' {aka 'char'} loses precision [-fpermissive]
  171 |                 _itot(pid, (TCHAR)buf, 10);
      |                            ^~~~~~~~~~
pw-window-watcher2.cpp:171:28: error: invalid conversion from 'TCHAR' {aka 'char'} to 'char*' [-fpermissive]
  171 |                 _itot(pid, (TCHAR)buf, 10);
      |                            ^~~~~~~~~~
      |                            |
      |                            TCHAR {aka char}
In file included from c:\mingw64\include\c++\12.2.0\cstdlib:75,
                 from c:\mingw64\include\c++\12.2.0\ext\string_conversions.h:41,
                 from c:\mingw64\include\c++\12.2.0\bits\basic_string.h:3960,
                 from c:\mingw64\include\c++\12.2.0\string:53,
                 from c:\mingw64\include\c++\12.2.0\bits\locale_classes.h:40,
                 from c:\mingw64\include\c++\12.2.0\bits\ios_base.h:41,
                 from c:\mingw64\include\c++\12.2.0\ios:42,
                 from c:\mingw64\include\c++\12.2.0\ostream:38,
                 from c:\mingw64\include\c++\12.2.0\iostream:39:
c:\mingw64\x86_64-w64-mingw32\include\stdlib.h:448:48: note:   initializing argument 2 of 'char* _itoa(int, char*, int)'
  448 |   _CRTIMP char *__cdecl _itoa(int _Value,char *_Dest,int _Radix);
      |                                          ~~~~~~^~~~~
pw-window-watcher2.cpp:189:27: error: cannot convert 'LPWSTR' {aka 'wchar_t*'} to 'LPCSTR' {aka 'const char*'}
  189 |                   lstrlen(str)+1 * sizeof(TCHAR),   // = length of string + terminating '\0' !!!
      |                           ^~~
      |                           |
      |                           LPWSTR {aka wchar_t*}
In file included from c:\mingw64\x86_64-w64-mingw32\include\windows.h:70,
                 from pw-window-watcher2.cpp:27:
c:\mingw64\x86_64-w64-mingw32\include\winbase.h:1449:42: note:   initializing argument 1 of 'int lstrlenA(LPCSTR)'
 1449 |   WINBASEAPI int WINAPI lstrlenA (LPCSTR lpString);
      |                                   ~~~~~~~^~~~~~~~
